--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "@angular/platform-browser-dynamic": "~11.0.4",
     "@angular/router": "~11.0.4",
     "@apollo/client": "^3.0.0",
+    "@mdi/font": "^5.8.55",
+    "@types/jest": "^26.0.19",
     "apollo-angular": "^2.1.0",
     "graphql": "^15.0.0",
     "materialize-css": "^1.0.0-rc.2",
+    "ngx-pagination": "^5.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
