--- a/angular.json
+++ b/angular.json
@@ -25,6 +25,7 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
+            "allowedCommonJsDependencies": ["graphql-tag", "zen-observable"],
             "aot": true,
             "assets": ["src/favicon.ico"],
             "styles": [
